# llm-convos

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
llm_convos/: __init__.py  db.py  display.py  text.py  tui.py
tests/: test_convos.py
